--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.3",
