--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,22 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^20.3.3",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
