--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@prisma/client": "^4.16.2",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "zod": "^3.21.4"
@@ -25,8 +27,10 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.3",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
