--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
     "@prisma/client": "^4.16.2",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
+    "config": "^3.3.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.7",
     "zod": "^3.21.4"
   },
   "prisma": {
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
