--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "redis": "^4.6.7",
@@ -31,9 +33,11 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/config": "^3.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.3",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
