--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,12 @@
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "redis": "^4.6.7",
@@ -38,6 +40,7 @@
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.3",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
