--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
+    "build": "tsc . -p",
+    "start": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "redis": "^4.6.7",
+    "ts-node-dev": "^2.0.0",
     "zod": "^3.21.4"
   },
   "prisma": {
@@ -36,6 +38,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/config": "^3.3.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
