--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc . -p",
-    "start": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
+    "db:migrate": "npx prisma migrate dev --name user-entity --create-only && npx prisma generate",
+    "db:push": "npx prisma db push"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.16.2",
-    "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
@@ -21,7 +21,6 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
@@ -38,7 +37,6 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
