Add template engine

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "redis": "^4.6.7",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.21.4"
@@ -41,6 +42,7 @@
     "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.3",
+    "@types/pug": "^2.0.6",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
