--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc . -p",
     "dev": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
-    "db:migrate": "npx prisma migrate dev --name user-entity --create-only && npx prisma generate",
-    "db:push": "npx prisma db push"
+    "migrate": "npx prisma migrate dev --name user-entity --create-only && npx prisma generate",
+    "push": "npx prisma db push"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,11 @@
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "pug": "^3.0.2",
     "redis": "^4.6.7",
     "ts-node-dev": "^2.0.0",
@@ -38,10 +40,12 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/html-to-text": "^9.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.3",
+    "@types/nodemailer": "^6.4.8",
     "@types/pug": "^2.0.6",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
