--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "build": "tsc . -p",
     "dev": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
     "migrate": "npx prisma migrate dev --name user-entity --create-only && npx prisma generate",
-    "push": "npx prisma db push"
+    "push": "npx prisma db push",
+    "test": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -47,9 +48,12 @@
     "@types/node": "^20.3.3",
     "@types/nodemailer": "^6.4.8",
     "@types/pug": "^2.0.6",
+    "@vitest/coverage-v8": "^0.33.0",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
     "prisma": "^5.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.33.0",
+    "vitest-mock-extended": "^1.1.4"
   }
 }
