Create IconButton and story

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "./.eslintrc.cjs", "./tailwind.config.js"],
+  "include": ["src", "./.eslintrc.cjs", "./tailwind.config.js", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
