--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
+    "vite-plugin-svgr": "^3.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
