--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-popover": "1.0.6",
     "@reduxjs/toolkit": "^1.9.5",
     "class-variance-authority": "^0.7.0",
     "react": "^18.2.0",
