--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
